Fixed the background issue on mobile

--- a/pretty.css
+++ b/pretty.css
@@ -10,8 +10,9 @@ body {
   background-color: #fafafa;
   color: #222;
   background-image: url('mountains.png');
-  background-size: cover;
   background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 #container {
